@@ -3,10 +3,13 @@
 __copyright__ = "Copyright (C) 2016  Martin Blais"
 __license__ = "GNU GPLv2"
 
+import contextlib
 import os
 import datetime
 import unittest
 import textwrap
+import functools
+import warnings
 import sys
 from unittest import mock
 from os import path
@@ -17,12 +20,23 @@ from beancount.ingest import importer
 from beancount.ingest import regression
 
 
+def suppress_deprecation(fun):
+    @functools.wraps(fun)
+    def wrapped(*args, **kw):
+        with warnings.catch_warnings():
+            warnings.filterwarnings('ignore', module=r'.*\.regression',
+                                    category=DeprecationWarning)
+            return fun(*args, **kw)
+    return wrapped
+
+
 class _DummyImporter(importer.ImporterProtocol):
     "A dummy importer for testing."
 
 
 class TestImporterTests(test_utils.TestTempdirMixin, unittest.TestCase):
 
+    @suppress_deprecation
     @mock.patch('beancount.ingest.extract.extract_from_file')
     def test_test_expect_extract(self, extract_mock):
         importer = _DummyImporter()
@@ -63,6 +77,7 @@ class TestImporterTests(test_utils.TestTempdirMixin, unittest.TestCase):
                     method(*args)
             self.assertEqual(1, extract_mock.call_count)
 
+    @suppress_deprecation
     def test_test_expect_file_date(self):
         importer = _DummyImporter()
 
@@ -96,6 +111,7 @@ class TestImporterTests(test_utils.TestTempdirMixin, unittest.TestCase):
             self.assertEqual(1, imp_meth.call_count)
             self.assertTrue(path.exists(expect_filename))
 
+    @suppress_deprecation
     def test_test_expect_file_name(self):
         importer = _DummyImporter()
 
@@ -154,6 +170,7 @@ class TestImporterTestGenerators(test_utils.TestTempdirMixin, unittest.TestCase)
                 tests = list(regression.compare_sample_files(importer))
                 self.assertEqual(1, len(tests))
 
+    @suppress_deprecation
     def test_compare_sample_files__with_directory(self):
         importer = _DummyImporter()
         with mock.patch.object(importer.__class__, 'file_date') as imp_meth:
