@@ -4,6 +4,11 @@
 Note: This file contains a list changes in the 'default' branch.
 
 
+2018-12-12
+
+  - Suppressed almost all the Python 3.8 warnings.
+
+
 2018-11-16
 
   - Added more logging in loader (done while debugging something else).
